--- a/style.css
+++ b/style.css
@@ -29,3 +29,10 @@ input {
     border-radius: 10px;
     justify-content: center;
 }
+
+.card-img-top {
+    height: 180px;
+    width: 100%;
+    object-fit: cover;
+  }
+  
