--- a/style.css
+++ b/style.css
@@ -35,4 +35,13 @@ input {
     width: 100%;
     object-fit: cover;
   }
-  
+
+  .nota-fiscal {
+  max-width: 400px;
+  width: 100%;
+  background-color: #212529;
+  color: white;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.15);
+}
